dump course info in batches

--- a/canvas_courses_all.ipynb
+++ b/canvas_courses_all.ipynb
@@ -109,7 +109,7 @@
     {
      "data": {
       "text/plain": [
-       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x7feef9a70df0>}"
+       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x7fc698847af0>}"
       ]
      },
      "execution_count": 5,
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "'\\n#Read the Stellar to Canvas migration list on Google Drive, and construct a\\n#list of course_id s\\ngs_name = \"Stellar to Canvas content migration request (Responses)\"\\n#gs_name = \"xyz\"\\ngc = gspread.service_account(filename=cred_file)\\nsh = gc.open(gs_name).sheet1\\nsh_data = sh.get_all_values()\\nhead_col = sh_data.pop(0)\\nstellar_df = pd.DataFrame(sh_data, columns=head_col)\\nstellar_df[\\'course_id\\'] = stellar_df[\\'Canvas URL to migrate to\\'].str.split(\"/\").str[-1]\\n'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -536,10 +536,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -552,25 +550,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-23-c136a916a10b>:240: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-7-c136a916a10b>:240: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_times_all = np.array(fa_times_all, dtype='datetime64')\n",
-      "<ipython-input-23-c136a916a10b>:241: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-7-c136a916a10b>:241: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_c_times_all = np.array(fa_c_times_all, dtype='datetime64')\n",
-      "<ipython-input-23-c136a916a10b>:243: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-7-c136a916a10b>:243: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_times = np.array(fa_times, dtype='datetime64')\n",
-      "<ipython-input-23-c136a916a10b>:244: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-7-c136a916a10b>:244: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_c_times = np.array(fa_c_times, dtype='datetime64')\n",
-      "<ipython-input-23-c136a916a10b>:259: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-7-c136a916a10b>:259: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "  q_times = np.array(q_times, dtype='datetime64')\n",
+      "<ipython-input-7-c136a916a10b>:240: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "  fa_times_all = np.array(fa_times_all, dtype='datetime64')\n",
+      "<ipython-input-7-c136a916a10b>:241: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "  fa_c_times_all = np.array(fa_c_times_all, dtype='datetime64')\n",
+      "<ipython-input-7-c136a916a10b>:243: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "  fa_times = np.array(fa_times, dtype='datetime64')\n",
+      "<ipython-input-7-c136a916a10b>:244: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "  fa_c_times = np.array(fa_c_times, dtype='datetime64')\n",
+      "<ipython-input-7-c136a916a10b>:259: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  q_times = np.array(q_times, dtype='datetime64')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5 more courses done. Ending course_id 20\n",
-      "(5, 28)\n",
-      "Getting course info for each course... Done.\n"
      ]
     }
    ],
@@ -579,27 +578,79 @@
     "print(\"Getting course info for each course...\")\n",
     "filtered_courses_df = pd.read_csv('all_canvas_courses.csv')\n",
     "all_course_list_0 = filtered_courses_df.course_id.tolist()\n",
-    "all_course_list_0_rows = []\n",
+    "\n",
     "all_course_list_0_cols = ['course_id', 'course_sis_id', 'Dept', 'enrollment_term','parent_account', 'Course_name', \n",
     "    'course_state', 'num_files','num_assignments','num_tot_fa','last_update_at','first_created_at', 'num_students',\n",
     "            'default_view','is_public', 'public_syllabus', 'public_syllabus_to_auth', 'is_public_to_auth_users',\n",
     "            'course_visibility','num_published_dis_topics','num_published_pages', 'num_published_quizzes', \n",
     "            'num_assignment_groups','num_modules', 'num_module_items','farthest_quiz_due_lock_date']\n",
     "\n",
+    "    \n",
     "if run_mode == 'dev' or run_mode=='mig':\n",
-    "    num_courses = 5\n",
+    "    course_pos_list = all_course_list_0[:5]\n",
+    "    num_courses_dump = 3\n",
     "elif run_mode == 'prod' or run_mode=='prod_home':\n",
-    "    num_courses = len(all_course_list_0) + 1\n",
+    "    course_pos_list = all_course_list_0\n",
+    "    num_courses_dump = 100\n",
+    "\n",
     "    \n",
-    "for c_id in all_course_list_0[:num_courses]:\n",
-    "    all_course_list_0_rows.append(get_course_info(c_id))\n",
-    "    #debug line\n",
-    "    if len(all_course_list_0_rows)%5==0:\n",
-    "        print(\"5 more courses done. Ending course_id {}\".format(c_id))\n",
-    "        with open(\"out\", \"a+\") as file_:\n",
-    "            file_.write(\"5 more courses done. Ending course_id {}\".format(c_id))\n",
+    "course_max_num = len(course_pos_list)\n",
+    "all_course_list_0_rows = []\n",
+    "\n",
+    "#create the header list:\n",
+    "with open (\"course_summary_df.csv\",'w') as file_:\n",
+    "    file_.write(\",\".join(all_course_list_0_cols[:])+\"\\n\")\n",
     "    \n",
-    "all_course_list_0_df = pd.DataFrame.from_records(all_course_list_0_rows, columns=all_course_list_0_cols)\n",
+    "\n",
+    "dump_num = 0\n",
+    "i = 0\n",
+    "\n",
+    "\n",
+    "while i < course_max_num:\n",
+    "    cid = course_pos_list[i]\n",
+    "    course_info = get_course_info(cid)\n",
+    "\n",
+    "    if course_info != None:\n",
+    "        all_course_list_0_rows.append(course_info)\n",
+    "\n",
+    "    i += 1 #move course position in the course list        \n",
+    "\n",
+    "    if  i%num_courses_dump == 0:\n",
+    "        all_course_list_0_df = pd.DataFrame.from_records(all_course_list_0_rows, columns=all_course_list_0_cols)\n",
+    "\n",
+    "        all_course_list_0_df_ = all_course_list_0_df[all_course_list_0_cols]\n",
+    "        all_course_list_0_df_.to_csv('course_summary_df.csv', header=None, index=None, mode='a')\n",
+    "\n",
+    "        dump_num += 1 #increment the dump number\n",
+    "        all_course_list_0_rows = [] #start a new tab_dict_list\n",
+    "        \n",
+    "\n",
+    "#finally, once out of the loop, check if the tab_dict_list is empty, and dump it if not.\n",
+    "if len(all_course_list_0_rows) != 0:\n",
+    "        all_course_list_0_df = pd.DataFrame.from_records(all_course_list_0_rows, columns=all_course_list_0_cols)\n",
+    "\n",
+    "        all_course_list_0_df_ = all_course_list_0_df[all_course_list_0_cols]\n",
+    "        all_course_list_0_df_.to_csv('course_summary_df.csv', header=None, index=None, mode='a')\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5, 28)\n",
+      "Getting course info for each course... Done.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Once all these are dumped, read them back into a single dataframe before proceeding to next steps:\n",
+    "all_course_list_0_df = pd.read_csv(\"course_summary_df.csv\")\n",
     "all_course_list_0_df['if_LT_led'] = 0\n",
     "all_course_list_0_df['LT_email'] = np.nan\n",
     "print(all_course_list_0_df.shape)\n",
@@ -609,22 +660,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-23-c136a916a10b>:240: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-7-c136a916a10b>:240: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_times_all = np.array(fa_times_all, dtype='datetime64')\n",
-      "<ipython-input-23-c136a916a10b>:241: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-7-c136a916a10b>:241: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_c_times_all = np.array(fa_c_times_all, dtype='datetime64')\n",
-      "<ipython-input-23-c136a916a10b>:243: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-7-c136a916a10b>:243: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_times = np.array(fa_times, dtype='datetime64')\n",
-      "<ipython-input-23-c136a916a10b>:244: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-7-c136a916a10b>:244: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  fa_c_times = np.array(fa_c_times, dtype='datetime64')\n",
-      "<ipython-input-23-c136a916a10b>:259: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "<ipython-input-7-c136a916a10b>:259: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
       "  q_times = np.array(q_times, dtype='datetime64')\n"
      ]
     },
@@ -674,17 +725,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "all_courses_df = pd.concat([all_course_list_0_df, all_lt_courses], ignore_index=True)\n",
+    "all_courses_df['last_update_at'] = pd.to_datetime(all_courses_df['last_update_at'])\n",
+    "all_courses_df['first_created_at'] = pd.to_datetime(all_courses_df['first_created_at'])\n",
+    "all_courses_df['farthest_quiz_due_lock_date'] = pd.to_datetime(all_courses_df['farthest_quiz_due_lock_date'])\n",
     "#all_courses_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -715,33 +769,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_courses_df['last_update_at'] = all_courses_df['last_update_at'].dt.strftime('%Y-%m-%d')\n",
-    "all_courses_df['first_created_at'] = all_courses_df['first_created_at'].dt.strftime('%Y-%m-%d')\n",
-    "all_courses_df['farthest_quiz_due_lock_date'] = all_courses_df['farthest_quiz_due_lock_date'].dt.strftime('%Y-%m-%d')\n",
-    "#all_courses_df.tail()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1it [00:04,  4.56s/it]\n"
+      "1it [00:07,  7.10s/it]\n"
      ]
     }
    ],
    "source": [
     "#Exclude the last day's information as that's still incomplete.\n",
-    "all_courses_df['first_created_at'] = pd.to_datetime(all_courses_df['first_created_at'])\n",
+    "#all_courses_df['first_created_at'] = pd.to_datetime(all_courses_df['first_created_at'])\n",
     "all_courses_df = all_courses_df[all_courses_df.first_created_at!= all_courses_df['first_created_at'].max()]\n",
+    "\n",
+    "all_courses_df['last_update_at'] = all_courses_df['last_update_at'].dt.strftime('%Y-%m-%d')\n",
+    "all_courses_df['first_created_at'] = all_courses_df['first_created_at'].dt.strftime('%Y-%m-%d')\n",
+    "all_courses_df['farthest_quiz_due_lock_date'] = all_courses_df['farthest_quiz_due_lock_date'].dt.strftime('%Y-%m-%d')\n",
+    "\n",
     "\n",
     "all_courses_df.to_gbq('lt_courses.{}'.format(out_table), project_id, if_exists='replace', credentials=credentials)\n",
     "#all_courses_df.to_csv('all_courses.csv', index=None)"
