new analytics and course settings notebook added

--- a/explore_course_features.ipynb
+++ b/explore_course_features.ipynb
@@ -30,8 +30,7 @@
     "\n",
     "from time import time\n",
     "\n",
-    "from params import basedir, run_mode\n",
-    "import plotly.express as px"
+    "from params import basedir, run_mode"
    ]
   },
   {
